--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=SlowKingg_python-project-50
 sonar.organization=slowkingg
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.verbose=true
