feat: update sonar-project.properties to include source and test directories

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,7 @@
 sonar.projectKey=SlowKingg_python-project-50
 sonar.organization=slowkingg
+sonar.language=py
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.verbose=true
+sonar.sources=gendiff/
+sonar.tests=tests/
