fix: add coverage exclusions for scripts in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.python.coverage.reportPaths=coverage.xml
 sonar.verbose=true
 sonar.sources=gendiff/
 sonar.tests=tests/
+sonar.coverage.exclusions=gendiff/scripts/*
