fix: :bug: add missing sonar.python.version property in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=SlowKingg_python-project-50
 sonar.organization=slowkingg
 sonar.language=py
+sonar.python.version=3.8
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.verbose=true
 sonar.sources=gendiff/
